# capstone_iot_monitoring

./: .gitignore  .gitmodules  Internal System.drawio  README.md  Untitled Diagram.drawio
490_IOT-main/: .gitignore  IoT1.sln  README.md
490_IOT-main/GrpcClient/: GrpcClient.csproj  Program.cs  packages.config
490_IOT-main/GrpcClient/Properties/: AssemblyInfo.cs
490_IOT-main/GrpcClient/proto/: models.proto
490_IOT-main/IoT1/: App.xaml  App.xaml.cs  HomePage.xaml  HomePage.xaml.cs  IoT1.csproj  LandingWindow.xaml  LandingWindow.xaml.cs  Location.xaml  Location.xaml.cs  LoginPage.xaml  LoginPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Notification.cs  NotificationsViewModel.cs  RegisterPage.xaml  RegisterPage.xaml.cs  User.cs  UserInputWindow.xaml  UserInputWindow.xaml.cs  UserPage.xaml  UserPage.xaml.cs  packages.config
490_IOT-main/IoT1/Model/: ConnectViewModel.cs  Connection.cs  PacketModel.cs  PacketViewModel.cs  StreamPackets.cs
490_IOT-main/IoT1/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
490_IOT-main/IoT1/View/: Connect.xaml  Connect.xaml.cs  PacketView.xaml  PacketView.xaml.cs
GrpcClient/: GrpcClient.sln
GrpcClient/GrpcClient/: GrpcClient.csproj  Program.cs  packages.config
GrpcClient/GrpcClient/Properties/: AssemblyInfo.cs
iot_monitoring_endpoint/: CMakeLists.txt  CMakeSettings.json
iot_monitoring_endpoint/iot_monitoring_endpoint/: CMakeLists.txt  common.hpp  init.hpp  installer.hpp  iot_db_def.hpp  iot_db_test.cxx  iot_db_test.hpp  iot_main.hpp  iot_monitoring_endpoint.cpp  iot_monitoring_endpoint.h  iot_reader.hpp  packet_stream.hpp  polling.hpp
iot_monitoring_endpoint/lib/: CMakeLists.txt
iot_monitoring_endpoint/lib/arg_parser/: CMakeLists.txt
iot_monitoring_endpoint/lib/arg_parser/arg_parser/: CMakeLists.txt
iot_monitoring_endpoint/lib/arg_parser/arg_parser/include/: utils.hpp
iot_monitoring_endpoint/lib/arg_parser/arg_parser/src/: arg_parser.cxx
iot_monitoring_endpoint/lib/arg_parser/include/: arg_parser.hpp
iot_monitoring_endpoint/lib/arg_parser/src/: arg_parser.cxx
iot_monitoring_endpoint/lib/data/: CMakeLists.txt
iot_monitoring_endpoint/lib/data/include/: packet.hpp  packet_stream.hpp
iot_monitoring_endpoint/lib/data/src/: data.cxx
iot_monitoring_endpoint/lib/database/: CMakeLists.txt
iot_monitoring_endpoint/lib/database/include/: database.hpp  schema.hpp
iot_monitoring_endpoint/lib/database/src/: database.cxx
iot_monitoring_endpoint/lib/serial/: CMakeLists.txt
iot_monitoring_endpoint/lib/serial/include/: device.hpp  serial.hpp
iot_monitoring_endpoint/lib/serial/src/: device.cxx  serial.cxx
iot_monitoring_endpoint/lib/server/: CMakeLists.txt
iot_monitoring_endpoint/lib/server/def/: models.grpc.pb.cc  models.grpc.pb.h  models.pb.cc  models.pb.h  remoteendpoint.hpp
iot_monitoring_endpoint/lib/server/include/: models.grpc.pb.cc  models.grpc.pb.h  server.hpp
iot_monitoring_endpoint/lib/server/proto/: models.proto
iot_monitoring_endpoint/lib/server/src/: server.cxx
mock_serial/: platformio.ini
mock_serial/lib/data/: data.hpp
mock_serial/lib/lora/: lora.cxx  lora.hpp
mock_serial/src/: main.cpp
